--- a/app/style/index.less
+++ b/app/style/index.less
@@ -7,6 +7,7 @@ html,
 body {
 	margin: 0;
 	padding: 0;
+	font-family: arial, '微软雅黑';
 }
 html,
 body,
@@ -273,6 +274,7 @@ body,
 					width: 4.88rem;
 					height: 1.2rem;
 					background-image: url(../images/page1/name.png);
+					animation-duration: 1.2s;
 				}
 			}
 		}
@@ -637,6 +639,60 @@ body,
 			height: 1.56rem;
 			background-image: url(../images/page2/title-bg.png);
 		}
+		.text {
+			position: absolute;
+			left: 50%;
+			top: 1.8rem;
+			margin-left: -3.35rem;
+			i {
+				display: block;
+				width: 6.7rem;
+				height: 1.56rem;
+				background-image: url(../images/invatation.png);
+				animation-duration: 1.2s;
+			}
+		}
+	}
+	.content {
+		.text1 {
+			position: absolute;
+			left: 50%;
+			top: 3.2rem;
+			margin-left: -3.35rem;
+			i {
+				display: block;
+				width: 6.7rem;
+				height: 1.75rem;
+				background-image: url(../images/invatation1.png);
+				animation-delay: 1s;
+			}
+		}
+		.text2 {
+			position: absolute;
+			left: 50%;
+			top: 4.5rem;
+			margin-left: -3.35rem;
+			i {
+				display: block;
+				width: 6.7rem;
+				height: 1.56rem;
+				background-image: url(../images/invatation2.png);
+				animation-delay: 1.6s;
+			}
+		}
+		.text3 {
+			position: absolute;
+			left: 50%;
+			top: 6rem;
+			margin-left: -3.35rem;
+			i {
+				display: block;
+				width: 6.7rem;
+				height: 2.7rem;
+				background-image: url(../images/invatation3.png);
+				animation-delay: 2s;
+			}
+		}
 	}
 	.foot {
 		.house {
@@ -809,6 +865,19 @@ body,
 			height: 1.24rem;
 			background-image: url(../images/title-bg.png);
 			animation-delay: 0.4s;
+		}
+		.name {
+			position: absolute;
+			top: 8.76rem;
+			left: 0.64rem;
+			i {
+				display: block;
+				width: 5rem;
+				height: 1.24rem;
+				background-image: url(../images/bride-name.png);
+				animation-delay: 0.4s;
+				animation-duration: 1.2s;
+			}
 		}
 	}
 	.float {
@@ -1006,6 +1075,19 @@ body,
 				animation-delay: 0.4s;
 			}
 		}
+		.name {
+			position: absolute;
+			top: 8.12rem;
+			right: 0.3rem;
+			i {
+				display: block;
+				width: 5.8rem;
+				height: 2rem;
+				background-image: url(../images/croom-name.png);
+				animation-delay: 0.4s;
+				animation-duration: 1.2s;
+			}
+		}
 	}
 	.float {
 		.flower1 {
@@ -1154,16 +1236,32 @@ body,
 		    background-size: 100% auto;
 			animation-delay: 1.3s;
 		}
-		.title .bg {
-			position: absolute;
-			left: 50%;
-			top: 2.36rem;
-			margin-left: -2.5rem;
-			width: 5rem;
-			height: 1.24rem;
-			background-image: url(../images/title-bg.png);
-			animation-delay: 0.7s;
-			animation-duration: 0.7s;
+		.title {
+			.bg {
+				position: absolute;
+				left: 50%;
+				top: 2.36rem;
+				margin-left: -2.5rem;
+				width: 5rem;
+				height: 1.24rem;
+				background-image: url(../images/title-bg.png);
+				animation-delay: 0.7s;
+				animation-duration: 0.7s;
+			}
+			.text {
+				position: absolute;
+				left: 50%;
+				top: 2.36rem;
+				margin-left: -2.5rem;
+				i {
+					display: block;
+					width: 5rem;
+					height: 1.24rem;
+					background-image: url(../images/we-married.png);
+					animation-delay: 0.7s;
+					animation-duration: 0.8s;
+				}
+			}
 		}
 	}
 	.photo {
@@ -1301,8 +1399,7 @@ body,
 		.pic {
 			height: 100%;
 			background-size: cover;
-			animation-duration: 2s;
-			animation-delay: 1s;
+			animation-delay: 0.4s;
 			opacity: 0.2;
 			transition: opacity 0.5s;
 		}
