--- a/app/style/index.less
+++ b/app/style/index.less
@@ -374,7 +374,7 @@ body,
 		.body {
 			position: absolute;
 			left: 50%;
-			bottom: 2.25rem;
+			bottom: 2.1rem;
 			margin-left: -2rem;
 			width: 3.48rem;
 			height: 4.34rem;
@@ -683,7 +683,7 @@ body,
 		.text3 {
 			position: absolute;
 			left: 50%;
-			top: 6rem;
+			top: 5.8rem;
 			margin-left: -3.35rem;
 			i {
 				display: block;
@@ -754,9 +754,6 @@ body,
 }
 
 .page3 {
-	.content {
-		transform: translateY(0.6rem);
-	}
 	.photo {
 		.bg {
 			position: absolute;
@@ -959,9 +956,6 @@ body,
 }
 
 .page4 {
-	.content {
-		transform: translateY(0.6rem);
-	}
 	.photo {
 		.bg {
 			position: absolute;
@@ -1190,7 +1184,6 @@ body,
 		animation-duration: 1.5s;
 	}
 	.content {
-		transform: translateY(1rem);
 		.leaf {
 			position: absolute;
 			left: 4rem;
@@ -1273,7 +1266,7 @@ body,
 			width: 2.28rem;
 			height: 2.28rem;
 			margin: 0 0.1rem 0.1rem 0;
-			/*border: 1px solid red;*/
+			border-radius: 2px;
 			background-size: cover;
 		}
 		.pic1 {
@@ -1333,7 +1326,7 @@ body,
 		}
 		.flower2 {
 			position: absolute;
-			top: 4.8rem;
+			top: 3.8rem;
 		    left: 1rem;
 			transform: rotate(87deg);
 			i {
@@ -1360,7 +1353,7 @@ body,
 		}
 		.flower4 {
 			position: absolute;
-			top: 9rem;
+			top: 3.3rem;
 			left: 5.7rem;
 			i {
 				display: block;
