feat:花朵位置微调

--- a/app/style/index.less
+++ b/app/style/index.less
@@ -418,8 +418,8 @@ body,
 				animation-duration: 1.5s;
 			}
 			position: absolute;
-			right: 2.66rem;
-			bottom: 6.66rem;
+			right: 0;
+			top: 5rem;
 		    transform: rotate(322deg);
 		}
 	}
